# AdvancedDesktop

./: CMakeLists.txt  README.md
docs/: Documentation.md
docs/include/AdvancedDesktop/: AdvancedDesktop.md  Class_AdvancedDesktop.md
docs/include/POINT2/: Class_POINT2.md  POINT2.md
docs/include/Window/: Class_Window.md  Window.md
docs/include/WindowManager/: Class_WindowManager.md  WindowManager.md
docs/include/split/: split.md
docs/src/main/: main.md
include/: AdvancedDesktop.hpp  POINT2.hpp  Window.hpp  WindowManager.hpp  split.hpp
src/: main.cpp
